Update to sendmail 8.11.4:     8.11.4 revamps signal handling within the MTA in order to reduce     the likelihood of a race condition that can lead to heap     corruption as described in Michal Zalewski's advisory.  The     problems discussed in the advisory are not currently known to     be exploitable but we recommend upgrading to 8.11.4 in case a     method is found to exploit the signal handling race condition.     8.11.4 also fixes other bugs found since the release of 8.11.3.
See the RELEASE_NOTES file for more details.

--- a/gnu/usr.sbin/sendmail/mailstats/mailstats.8
+++ b/gnu/usr.sbin/sendmail/mailstats/mailstats.8
@@ -1,4 +1,4 @@
-.\" Copyright (c) 1998 Sendmail, Inc. and its suppliers.
+.\" Copyright (c) 1998-2001 Sendmail, Inc. and its suppliers.
 .\"	All rights reserved.
 .\"
 .\" By using this file, you agree to the terms and conditions set
@@ -6,9 +6,9 @@
 .\" the sendmail distribution.
 .\"
 .\"
-.\"	$Sendmail: mailstats.8,v 8.17.4.3 2000/12/29 18:12:20 gshapiro Exp $
+.\"	$Sendmail: mailstats.8,v 8.17.4.6 2001/05/07 22:06:38 gshapiro Exp $
 .\"
-.Dd December 29, 2000
+.Dd May 7, 2001
 .Dt MAILSTATS 1
 .Os
 .Sh NAME
